# wearforce-clean

./: .gitignore  README-LOCAL-DEV.md  README-TR.md  README.md  folder_structure.md
.claude/: settings.local.json
.github/workflows/: ci-cd.yml  ci.yml  disaster-recovery.yml  monitoring-setup.yml  production-deployment.yml  security-compliance.yml
clients/mobile/: .env.example  .eslintrc.js  .prettierrc.js  babel.config.js  jest.config.js  package.json  tsconfig.json
clients/mobile/src/: App.tsx
clients/shared/constants/: theme.ts
clients/shared/types/: api.ts
clients/shared/utils/: auth.ts  validation.ts
clients/watchos/WearForce/: ContentView.swift  WearForceApp.swift
clients/wear-os/: build.gradle  settings.gradle
clients/wear-os/app/: build.gradle
clients/web/: .env  .env.example  .eslintrc.cjs  .prettierrc  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
clients/web/src/: App.tsx  index.css  main.tsx  simple.css
docs/: deployment-guide.md  security-compliance-guide.md
docs/runbooks/: incident-response.md
docs/security/: security-checklist.md  threat-model.md
gateway/: Dockerfile  Makefile  README.md  docker-compose.clean.override.yml  docker-compose.yml  go.mod  go.sum
gateway/ai-services/: README.md  pyproject.toml
gateway/ai-services/llm-service/: .env.example  Dockerfile  README.md  __init__.py  batch_processor.py  billing.py  deploy.sh  docker-compose.yml  engine.py  function_calling.py  main.py  prometheus.yml
gateway/ai-services/nlu-service/: Dockerfile  README.md  __init__.py  conversation_manager.py  docker-compose.dev.yml  docker-entrypoint.sh  entity_extractor.py  intent_classifier.py  langgraph_orchestrator.py  main.py  requirements.txt  start-dev.sh  test_nlu_service.py  tool_dispatcher.py
gateway/ai-services/nlu-service/mocks/: crm-expectations.json  erp-expectations.json  mockserver.properties
gateway/ai-services/nlu-service/monitoring/: prometheus.yml
gateway/ai-services/nlu-service/sql/: init.sql
gateway/ai-services/rag-service/: Dockerfile  README.md  __init__.py  batch_processor.py  citation_generator.py  docker-compose.yml  document_processor.py  embeddings.py  indexing_manager.py  main.py  search_engine.py  start-dev.sh  test_rag_service.py
gateway/ai-services/rag-service/sql/: init.sql
gateway/ai-services/shared/: __init__.py  circuit_breaker.py  config.py  database.py  exceptions.py  middleware.py  models.py  monitoring.py  task_manager.py  utils.py
gateway/ai-services/stt-service/: .env.example  Dockerfile  __init__.py  audio_processor.py  grpc_server.py  main.py  pyproject.toml  requirements.txt  whisper_engine.py
gateway/ai-services/stt-service/tests/: __init__.py  conftest.py  test_audio_processor.py  test_grpc_server.py  test_main.py  test_whisper_engine.py
gateway/ai-services/tests/: __init__.py  conftest.py  test_llm_service.py  test_nlu_service.py  test_rag_service.py
gateway/ai-services/tts-service/: Dockerfile  README.md  __init__.py  docker-compose.yml  main.py  piper_engine.py  start.sh  test_tts.py  voice_manager.py
gateway/cmd/gateway/: main.go
gateway/configs/: gateway.yaml
gateway/deployments/: prometheus.yml
gateway/deployments/keycloak/: realm-export.json
gateway/deployments/nginx/: nginx.conf
gateway/deployments/opa/: config.yaml
gateway/deployments/postgres/: init.sql
gateway/internal/api/: device_flow.go
gateway/internal/auth/: device_flow.go  jwt.go
gateway/internal/config/: config.go  config_test.go
gateway/internal/encryption/: key_manager.go  service.go
gateway/internal/middleware/: audit.go  auth.go  auth_test.go  cors.go  logging.go  ratelimit.go  security.go
gateway/internal/proxy/: websocket.go
gateway/internal/server/: grpc.go  interceptors.go  services.go  tls.go
gateway/internal/tls/: tls_manager.go
gateway/internal/tracing/: tracing.go
gateway/pkg/proto/: audio.pb.go  audio.proto  audio_grpc.pb.go  chat.pb.go  chat.proto  chat_grpc.pb.go  services.pb.go  services.proto  services_grpc.pb.go
k8s/namespaces/: development.yaml  monitoring.yaml  production.yaml  staging.yaml
scripts/: blue-green-deploy.sh  dev-start-clean.sh
scripts/security-tests/: security-test-suite.py
services/: .env.example  Dockerfile  Makefile  README-Docker.md  alembic.ini  docker-compose.clean.override.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.yml  manage_db.py  pyproject.toml  pytest.ini  seed_data.py
services/crm/: Dockerfile  __init__.py  api.py  main.py  models.py  repositories.py  services.py
services/erp/: Dockerfile  __init__.py  api.py  main.py  models.py  repositories.py  services.py
services/gateway/config/: opa-config.yaml
services/gateway/deployments/opa/policies/: data-access.rego  wearforce.rego
services/graphql/: Dockerfile  __init__.py  main.py  resolvers.py  schema.py
services/k8s/alertmanager/: alertmanager-config.yaml
services/k8s/grafana/: grafana-dashboards.yaml  grafana-deployment.yaml
services/k8s/monitoring/: health-monitor-deployment.yaml  jaeger-deployment.yaml  namespace.yaml  otel-collector.yaml  slo-definitions.yaml
services/k8s/prometheus/: prometheus-config.yaml  prometheus-deployment.yaml  prometheus-rules.yaml
services/migrations/: env.py
services/migrations/versions/: 001_initial_schema.py  002_performance_indexes.py
services/notification/: Dockerfile  api.py  main.py  models.py  providers.py  repositories.py  services.py
services/security/: Dockerfile.security-scanner  security_api.py  vulnerability_scanner.py
services/shared/: __init__.py  auth.py  certificate_management.py  compliance.py  config.py  database.py  encryption.py  events.py  exceptions.py  health_checks.py  middleware.py  security_middleware.py  tracing.py  utils.py
services/tests/: conftest.py  utils.py
services/tests/factories/: crm_factories.py  erp_factories.py  notification_factories.py
services/tests/integration/: test_api_endpoints.py
services/tests/unit/: test_crm_services.py
(+115 files in other folders)
