[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "wearforce-ai-services"
version = "0.1.0"
description = "WearForce AI Services - STT, TTS, NLU, LLM, and RAG Pipeline"
authors = ["WearForce Team"]
readme = "README.md"
packages = [{include = "shared"}, {include = "stt_service"}, {include = "tts_service"}, {include = "nlu_service"}, {include = "llm_service"}, {include = "rag_service"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
redis = {extras = ["hiredis"], version = "^5.0.1"}
asyncpg = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
alembic = "^1.13.1"
openai = "^1.3.0"
httpx = "^0.25.2"
websockets = "^12.0"
langchain = "^0.1.0"
langchain-community = "^0.0.10"
langgraph = "^0.0.20"
qdrant-client = "^1.7.0"
sentence-transformers = "^2.2.2"
numpy = "^1.24.0"
scipy = "^1.11.0"
librosa = "^0.10.1"
soundfile = "^0.12.1"
pydub = "^0.25.1"
ffmpeg-python = "^0.2.0"
whispercpp = "^0.1.0"
faster-whisper = "^0.10.0"
openai-whisper = "^20231117"
webrtcvad = "^2.0.10"
grpcio = "^1.60.0"
grpcio-tools = "^1.60.0"
torch = "^2.1.0"
torchaudio = "^2.1.0"
transformers = "^4.36.0"
accelerate = "^0.25.0"
bitsandbytes = "^0.41.0"
vllm = "^0.2.6"
xformers = "^0.0.22.post7"
flash-attn = "^2.3.6"
psutil = "^5.9.6"
prometheus-client = "^0.19.0"
structlog = "^23.2.0"
tenacity = "^8.2.3"
typer = "^0.9.0"
rich = "^13.7.0"
jinja2 = "^3.1.2"
pydub = "^0.25.1"
piper-tts = "^1.2.0"
phonemizer = "^3.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
httpx = "^0.25.2"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pre-commit = "^3.6.0"
ruff = "^0.1.6"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.ruff]
select = ["E", "F", "W", "C90", "I", "N", "D", "UP", "YTT", "ANN", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "ANN101", "ANN102"]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=shared --cov=stt_service --cov=tts_service --cov=nlu_service --cov=llm_service --cov=rag_service --cov-report=html --cov-report=term-missing --cov-fail-under=90"